[package]
name = "bibutils-sys"
version = "0.1.1"
description = "Rust bindings for bibutils, a program for bibliography format interconversion."
authors = [
    "Eric Förster <eric.foerster@outlook.com>",
    "Patrick Förster <patrick.foerster@outlook.de>"]
readme = "README.md"
links = "bibutils"
license = "GPL-3.0"
repository = "https://github.com/latex-lsp/bibutils-sys"
keywords = ["ffi", "bibutils"]
categories = ["external-ffi-bindings"]
edition = "2018"
exclude = [
    ".github/*"
]

[lib]
doctest = false

[dependencies]

[dev-dependencies]
indoc = "0.3"
tempfile = "3.1"

[build-dependencies]
cc = "1.0.66"
